--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -333,7 +333,7 @@
     <string name="send_address_resolve_openalias">Разрешения OpenAlias&#8230;</string>
     <string name="send_address_no_dnssec">OpenAlias без DNSSEC - адрес может быть подделан</string>
 
-    <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
+    <string name="status_wallet_connect_wrongversion">Версия узла несовместима - пожалуйста, обновите!</string>
 
     <string name="menu_info">Информация</string><!--Changed to: Show Secrets!-->
     <string name="menu_streetmode">Уличный режим</string>
